# Covid-App

./: CMakeLists.txt
inc/: Application.hpp  Customer.hpp  Location.hpp  Shop.hpp  ShopDataBase.hpp  ShopOwner.hpp  User.hpp  UserDataBase.hpp
src/: Application.cpp  Customer.cpp  Shop.cpp  ShopDataBase.cpp  ShopOwner.cpp  User.cpp  UserDataBase.cpp
tests/: tests.cpp
